--- a/q10/q10/index.html
+++ b/q10/q10/index.html
@@ -16,15 +16,35 @@
   <div class="wrapper">
     <h3 class="question--title">Q10-1 フラットなボタン</h3>
     <!-- Q10-1ここから -->
+    <div class="button-area">
+      <div class="btn red-button">Button</div>
+      <div class="btn blue-button">Button</div>
+      <div class="btn green-button">Button</div>
+    </div>
     <!-- Q10-1ここまで -->
     <h3 class="question--title">Q10-2 影を付けたボタン</h3>
     <!-- Q10-2ここから -->
+    <div class="button-area">
+      <div class="btn red-button-s">Button</div>
+      <div class="btn blue-button-s">Button</div>
+      <div class="btn green-button-s">Button</div>
+    </div>
     <!-- Q10-2ここまで -->
     <h3 class="question--title">Q10-3 押した感覚のあるボタン</h3>
     <!-- Q10-3ここから -->
+    <div class="button-area">
+      <div class="btn red-button-p">Button</div>
+      <div class="btn blue-button-p">Button</div>
+      <div class="btn green-button-p">Button</div>
+    </div>
     <!-- Q10-3ここまで -->
     <h3 class="question--title">Q10-4 カーソルを当てた時にスタイルが変わるボタン</h3>
     <!-- Q10-4ここから -->
+    <div class="button-area">
+      <div class="btn btn-button double">Button</div>
+      <div class="btn btn-button dotted">Button</div>
+      <div class="btn btn-button dashed">Button</div>
+    </div>
     <!-- Q10-4ここまで -->
   </div>
 </body>
