--- a/q6/q6/index.html
+++ b/q6/q6/index.html
@@ -12,6 +12,20 @@
 
 <body>
   <!-- Q6回答はここから -->
+  <header id="header">
+    <div class="header-area">
+      <div class="logo-area">
+        <a href="#">SHOP</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">MenuList</a></li>
+          <li><a href="#">Access</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <!-- Q6回答はここまで -->
   <main>
     <div class="wrapper">
