--- a/q9/q9/index.html
+++ b/q9/q9/index.html
@@ -17,59 +17,99 @@
     <section>
       <h3 class="question--title">Q9-1 フェードイン</h3>
       <!-- Q9-1ここから -->
+        <div class="green fadeIn"></div>
       <!-- Q9-1ここまで -->
       <h3 class="question--title">Q9-2 フェードアウト</h3>
       <!-- Q9-2ここから -->
-      <!-- Q9-2ここから -->
-      <!-- Q9-2ここまで -->
+        <div class="green fadeOut"></div>
       <!-- Q9-2ここまで -->
       <h3 class="question--title">Q9-3 回転</h3>
       <!-- Q9-3ここまで -->
+      <div class="green rotation"></div>
       <!-- Q9-4ここまで -->
     </section>
     <section>
       <h3 class="question--title">Q9-4 ホバー時に色変更</h3>
       <!-- Q9-4ここまで -->
+      <div class="blue hover"></div>
       <!-- Q9-4ここまで -->
       <h3 class="question--title">Q9-5 ホバー時に回転</h3>
       <!-- Q9-5ここまで -->
+      <div class="blue rotate"></div>
       <!-- Q9-5ここまで -->
       <h3 class="question--title">Q9-6 ホバー時に上にスライド</h3>
       <!-- Q9-6ここまで -->
+      <div class="blue up"></div>
       <!-- Q9-7ここまで -->
       <h3 class="question--title">Q9-7 ホバー時に右にスライド</h3>
       <!-- Q9-7ここまで -->
+      <div class="blue right"></div>
       <!-- Q9-7ここまで -->
       <h3 class="question--title">Q9-8 ホバー時に縦に引き延ばし</h3>
       <!-- Q9-8ここまで -->
+      <div class="blue hight"></div>
       <!-- Q9-8ここまで -->
       <h3 class="question--title">Q9-9 ホバー時に箱を横に引き延ばし</h3>
       <!-- Q9-9ここまで -->
+      <div class="blue width"></div>
       <!-- Q9-9ここまで -->
       <h3 class="question--title">Q9-10 ホバー時に箱の中に枠線</h3>
       <!-- Q9-10ここまで -->
+      <div class="blue border"></div>
       <!-- Q9-10ここまで -->
       <h3 class="question--title">Q9-11 ホバー時に箱に影をつける</h3>
       <!-- Q9-11ここまで -->
+      <div class="blue shadow"></div>
       <!-- Q9-11ここまで -->
     </section>
     <section>
       <h3 class="question--title">Q9-12 サークルの回転</h3>
-      <!-- Q9-13ここまで -->
-      <!-- Q9-13ここまで -->
+      <!-- Q9-12ここまで -->
+          <div class="circle"></div>
+      <!-- Q9-12ここまで -->
       <h3 class="question--title">Q9-13 カードリストのホバー</h3>
       <div class="check--sample">
+        <!-- Q9-13ここから -->
         <!-- カード内のテキストはこちらを使ってください -->
-        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur
-        sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
-        <!-- Q9-14ここまで -->
-        <!-- Q9-14ここまで -->
+        <div class="card-area">
+          <div class="card-box">
+            <div class="image"></div>
+            <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur
+            sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            </p>
+          </div>
+          <div class="card-box">
+            <div class="image"></div>
+            <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur
+            sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            </p>
+          </div>
+          <div class="card-box">
+            <div class="image"></div>
+            <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur
+            sint
+            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            </p>
+          </div>
+        </div>
+        <!-- Q9-13ここまで -->
       </div>
     </section>
   </div>
