--- a/q9/q9/index.html
+++ b/q9/q9/index.html
@@ -71,8 +71,8 @@
       <div class="check--sample">
         <!-- Q9-13ここから -->
         <!-- カード内のテキストはこちらを使ってください -->
-        <div class="card-area">
-          <div class="card-box">
+        <ul class="card-area">
+          <li class="card-box">
             <div class="image"></div>
             <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna
@@ -83,8 +83,8 @@
             sint
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
             </p>
-          </div>
-          <div class="card-box">
+          </li>
+          <li class="card-box">
             <div class="image"></div>
             <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna
@@ -95,8 +95,8 @@
             sint
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
             </p>
-          </div>
-          <div class="card-box">
+          </li>
+          <li class="card-box">
             <div class="image"></div>
             <p class="text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna
@@ -107,8 +107,8 @@
             sint
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
             </p>
-          </div>
-        </div>
+          </li>
+        </ul>
         <!-- Q9-13ここまで -->
       </div>
     </section>
